fix: 동행이 끝났을때, 채팅방 상태가 FINISH 상태일때만 리뷰를 작성할 수 있도록 수정