@@ -5,30 +5,44 @@ import connectripbe.connectrip_be.Review.dto.AccompanyReviewResponse;
 import connectripbe.connectrip_be.Review.entity.AccompanyReviewEntity;
 import connectripbe.connectrip_be.Review.repository.AccompanyReviewRepository;
 import connectripbe.connectrip_be.Review.service.AccompanyReviewService;
+import connectripbe.connectrip_be.chat.entity.ChatRoomEntity;
+import connectripbe.connectrip_be.chat.entity.type.ChatRoomType;
 import connectripbe.connectrip_be.chat.repository.ChatRoomRepository;
+import connectripbe.connectrip_be.global.exception.GlobalException;
+import connectripbe.connectrip_be.global.exception.type.ErrorCode;
 import connectripbe.connectrip_be.member.repository.MemberJpaRepository;
+import connectripbe.connectrip_be.member.entity.MemberEntity;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class AccompanyReviewServiceImpl implements AccompanyReviewService {
 
     private final AccompanyReviewRepository accompanyReviewRepository;
-    private final MemberJpaRepository MemberJpaRepository;
+    private final MemberJpaRepository memberJpaRepository;
     private final ChatRoomRepository chatRoomRepository;
 
     @Override
     public AccompanyReviewResponse createReview(AccompanyReviewRequest reviewRequest) {
-        var reviewer = MemberJpaRepository.findById(reviewRequest.getReviewerId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid reviewer ID"));
-        var target = MemberJpaRepository.findById(reviewRequest.getTargetId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid target ID"));
-        var chatRoom = chatRoomRepository.findById(reviewRequest.getChatRoomId())
-                .orElseThrow(() -> new IllegalArgumentException("Invalid chat room ID"));
+        MemberEntity reviewer = findMemberById(reviewRequest.getReviewerId());
+        MemberEntity target = findMemberById(reviewRequest.getTargetId());
+        ChatRoomEntity chatRoom = findChatRoomById(reviewRequest.getChatRoomId());
+
+        // Check if the chat room is in FINISH state
+        if (chatRoom.getChatRoomType() != ChatRoomType.FINISH) {
+            throw new GlobalException(ErrorCode.REVIEW_NOT_ALLOWED);
+        }
+
+        // Check if a review already exists
+        boolean reviewExists = accompanyReviewRepository.existsByReviewerAndTargetAndChatRoom(reviewer, target, chatRoom);
+        if (reviewExists) {
+            throw new GlobalException(ErrorCode.REVIEW_ALREADY_EXISTS);
+        }
 
         AccompanyReviewEntity review = AccompanyReviewEntity.builder()
                 .reviewer(reviewer)
@@ -39,25 +53,21 @@ public class AccompanyReviewServiceImpl implements AccompanyReviewService {
 
         accompanyReviewRepository.save(review);
 
-        return convertToDTO(review);
+        return AccompanyReviewResponse.fromEntity(review);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<AccompanyReviewResponse> getReviewsByChatRoomId(Long chatRoomId) {
         List<AccompanyReviewEntity> reviews = accompanyReviewRepository.findByChatRoomId(chatRoomId);
-        return reviews.stream().map(this::convertToDTO).collect(Collectors.toList());
+        return reviews.stream().map(AccompanyReviewResponse::fromEntity).toList();
     }
 
-    private AccompanyReviewResponse convertToDTO(AccompanyReviewEntity review) {
-        return AccompanyReviewResponse.builder()
-                .reviewId(review.getId())
-                .reviewerId(review.getReviewer().getId())
-                .targetId(review.getTarget().getId())
-                .chatRoomId(review.getChatRoom().getId())  // 수정된 부분
-                .content(review.getContent())
-                .createdAt(review.getCreatedAt())
-                .updatedAt(review.getUpdatedAt())
-                .deletedAt(review.getDeletedAt())
-                .build();
+    private MemberEntity findMemberById(Long memberId) {
+        return memberJpaRepository.findById(memberId).orElseThrow(() -> new GlobalException(ErrorCode.NOT_FOUND_MEMBER));
+    }
+
+    private ChatRoomEntity findChatRoomById(Long chatRoomId) {
+        return chatRoomRepository.findById(chatRoomId).orElseThrow(() -> new GlobalException(ErrorCode.NOT_FOUND_ACCOMPANY_POST));
     }
 }
